--- a/main.tex
+++ b/main.tex
@@ -91,11 +91,11 @@ Changing the composition of batches of data;
 Inserting an over time exponential decay (this modification was inspired by the BCM theory of the visual cortex);
 Strengthening and weakening the synapses of multiple neurons per input.
 
-\todo[inline]{spiegare più a parole che a punti}
 I also observe and classify the emerging patterns among the synapses, analysing them through agglomerative hierarchical clustering with multiple definition of distances, of which the Hausdorff inspired one seems to give the best results.
 
 \todo[inline]{vanno aggiunte le referenze alle varie parte teoriche spiegate, non è possibile una tesi con 5 referenze in totale\ldots tutti i metodi di ML usati vanno citati, etc\ldots}
 \end{abstract}
+
 \tableofcontents
 
 \listoftodos
@@ -106,7 +106,8 @@ The problem of classification has been studied since the beginnings of the field
 It consists in finding a certain algorithm that allows a machine to classify a set of data among a certain number of classes.
 Applications are, as one can imagine, widespread:
 from allowing computers to recognize handwriting, to the automation of transport systems, to the labelling of the huge amount of data produced in modern day scientific experiment.
-In general, the last 20 years have seen a growing number of fields in which a large quantity of digital data is available, the so called "big data" field. \todo[inline]{anche la potenza computazionale\ldots}
+In general, the last 20 years have seen a growing number of fields in which a large quantity of digital data is available, the so called "big data" field.
+Computational power has also seen a rapid increase in the same time span, creating the possibility of statistical analysis of these large datasets.
 For a long time, human capabilities in this field vastly surpassed those of automated systems;
 In tackling this problem, we open the possibility of many more applications that traditionally were not thought as  tasks for computers.
 
@@ -115,7 +116,6 @@ instead the task consist in separating the data among an \textit{a priori} unkno
 Again, applications are widespread:
 from marketing algorithms to medical data, to finance.
 The possibility here is not just to delegate to computers a task that would be costly and time consuming to humans, but to investigate new patterns that would be inherently incomprehensible to humans.
-
 
 \section{Machine learning}
 The field of machine learning studies algorithms that improve at a task through learning.
